# YOLOV11-ROS2-CPP

./: README.md
log/: latest_list
src/yolo_ws/: CMakeLists.txt
src/yolo_ws/src/: main.cpp
